--- a/head2.phtml
+++ b/head2.phtml
@@ -1,6 +1,3 @@
 <?php
-	$session = Mage::getSingleton('core/session')->getRequestDescription();
-	echo $this->getLayout()->createBlock('cms/block')->setBlockId($session)->toHtml();
-	Mage::getSingleton('core/session')->setData('request_description', '');
-	45
+	terminator
 ?>
