--- a/routing/src/app/app.component.html
+++ b/routing/src/app/app.component.html
@@ -12,12 +12,20 @@
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <!--<app-home></app-home>-->
       <router-outlet></router-outlet>
+	  
+    </div>
+	<
+  </div>
+  
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <app2-deoheader></app2-deoheader>
     </div>
   </div>
   
-  <!--<div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <app-servers></app-servers>
-    </div>
-  </div>-->
+  <!-- <div class="row"> -->
+    <!-- <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2"> -->
+      <!-- <app-servers></app-servers> -->
+    <!-- </div> -->
+  <!-- </div> -->
 </div>
